[package]
name = "reinhardt-tasks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
reinhardt-apps = { workspace = true }

async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = "0.4"
uuid = { workspace = true }
cron = "0.13"
rand = { workspace = true }

# Redis backend (optional)
redis = { workspace = true, optional = true }

# Database backend (optional)
sqlx = { workspace = true, features = [
  "postgres",
  "sqlite",
  "mysql",
], optional = true }

[dev-dependencies]
tokio = { workspace = true }
testcontainers = { workspace = true }
serial_test = { workspace = true }

[features]
default = []
redis-backend = ["redis"]
database-backend = ["sqlx"]
all-backends = ["redis-backend", "database-backend"]
