[package]
name = "reinhardt-utils"
version.workspace = true
description = "Utility functions aggregator for Reinhardt"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Core utils (always included)
utils-core = { version = "0.1.0", path = "crates/utils-core", package = "reinhardt-utils-core" }

# Internal crates as optional dependencies
reinhardt-logging = { version = "0.1.0", path = "crates/logging", optional = true }
reinhardt-cache = { version = "0.1.0", path = "crates/cache", optional = true }
reinhardt-storage = { version = "0.1.0", path = "crates/storage", optional = true }

[features]
default = []
logging = ["dep:reinhardt-logging"]
cache = ["dep:reinhardt-cache"]
storage = ["dep:reinhardt-storage"]
all = ["logging", "cache", "storage"]

[dev-dependencies]
tokio = { workspace = true }
proptest = "1.8"
