[package]
name = "reinhardt-utils"
version.workspace = true
description = "Utility functions aggregator for Reinhardt"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Core utils (always included)
utils-core = { version = "0.1.0-alpha.1", path = "crates/utils-core", package = "reinhardt-utils-core" }

# Internal crates as optional dependencies
reinhardt-logging = { version = "0.1.0-alpha.1", path = "crates/logging", optional = true }
reinhardt-cache = { version = "0.1.0-alpha.1", path = "crates/cache", optional = true }
reinhardt-storage = { version = "0.1.0-alpha.1", path = "crates/storage", optional = true }
reinhardt-static = { version = "0.1.0-alpha.1", path = "crates/static", optional = true }

[features]
default = []
logging = ["dep:reinhardt-logging"]
cache = ["dep:reinhardt-cache"]
storage = ["dep:reinhardt-storage"]
static = ["dep:reinhardt-static"]
all = ["logging", "cache", "storage", "static"]
utils-full = [
  "logging",
  "cache",
  "storage",
  "static",
  "reinhardt-logging/full",
  "reinhardt-cache/full",
  "reinhardt-storage/full",
  "reinhardt-static/full",
]

[dev-dependencies]
tokio = { workspace = true }
proptest = "1.8"
regex = "1.0"
