[package]
name = "example-common"
version = "0.1.0-alpha.1"
edition = "2024"
publish = false

[dependencies]
semver = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# Dependencies for manage_cli (only when reinhardt is available)
reinhardt-commands = { version = "^0.1.0-alpha.1", optional = true }
console = { version = "0.15", optional = true }

[features]
# Enable manage_cli feature
manage = ["reinhardt-commands", "console"]

# Note: example-common is also used as build-dependency by example build.rs scripts
# These dependencies are available at both build-time and run-time
