[package]
name = "example-hello-world"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# ⚠️ Get the latest version from crates.io
# TODO: This dependency will not resolve until reinhardt is published
reinhardt = "*"

[dev-dependencies]
example-test-macros = { path = "../test-macros" }
example-common = { path = "../common" }
tokio = { workspace = true }

[build-dependencies]
example-common = { path = "../common" }
