[package]
name = "example-hello-world"
version = "0.1.0-alpha.1"
edition = "2024"
publish = false

[dependencies]
# ⚠️ Get the latest version from crates.io
reinhardt = "^0.1.0-alpha.1"

[dev-dependencies]
example-test-macros = { path = "../test-macros" }
example-common = { path = "../common" }
tokio = { workspace = true }

[build-dependencies]
example-common = { path = "../common" }
