[workspace]
resolver = "2"
members = [
	"test-macros",
	"common",
	"examples-hello-world",
	"examples-rest-api",
	"examples-database-integration",
]

# Remote mode: Uses crates.io published versions
# Do not include [patch.crates-io] - use published reinhardt crates only

[workspace.dependencies]
# Common dependencies for examples only
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.24", features = ["json"] }
semver = "1"
once_cell = "1"
