[package]
name = "reinhardt-benchmarks"
version = "0.1.0-alpha.1"
edition = "2021"
publish = false

[dependencies]
# Reinhardt crates
reinhardt-test = { path = "../../crates/reinhardt-test" }
reinhardt-proxy = { path = "../../crates/reinhardt-proxy" }
reinhardt-orm = { path = "../../crates/reinhardt-orm" }
reinhardt-templates = { path = "../../crates/reinhardt-templates" }
reinhardt-auth = { path = "../../crates/reinhardt-auth" }
reinhardt-serializers = { path = "../../crates/reinhardt-serializers" }
reinhardt-apps = { path = "../../crates/reinhardt-apps" }

# Benchmarking
criterion = "0.7.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Standard library
std = []

[[bench]]
name = "performance_benchmarks"
harness = false
