[package]
name = "reinhardt-benchmarks"
version = "0.1.0-alpha.1"
edition = "2021"
publish = false

[dependencies]
# Reinhardt crates
reinhardt-test = { workspace = true }
reinhardt-proxy = { workspace = true }
reinhardt-orm = { workspace = true }
reinhardt-template = { workspace = true }
reinhardt-auth = { workspace = true }
reinhardt-serializers = { workspace = true }
reinhardt-apps = { workspace = true }

# Benchmarking
criterion = "0.7.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP types
http = "1.0"
bytes = "1.0"

[[bench]]
name = "performance_benchmarks"
harness = false
