[package]
name = "examples-database-integration"
version = "0.1.0-alpha.1"
edition = "2024"
publish = false

[[bin]]
name = "manage"
path = "src/bin/manage.rs"

[dependencies]
# Local development mode: patched with local workspace via Cargo.toml [patch.crates-io]
reinhardt = { version = "0.1.0-alpha.1", features = ["core", "conf", "database", "commands"] }

# Common utilities for availability checking
example-common = { path = "../../remote/common" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
console = "0.16.1"
async-trait = "0.1"

[dev-dependencies]
example-test-macros = { path = "../../remote/test-macros" }
example-common = { path = "../../remote/common" }
testcontainers = "0.25.2"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }

[build-dependencies]
example-common = { path = "../../remote/common" }

[features]
default = []
with-reinhardt = []

[[test]]
name = "database_tests"
required-features = ["with-reinhardt"]
