[package]
name = "example-common"
version = "0.1.0-alpha.1"
edition = "2024"
publish = false

[dependencies]
semver = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# Note: example-common is used as build-dependency by example build.rs scripts
# for availability checking. It does NOT provide shared application logic.
