[package]
name = "examples-rest-api"
version = "0.1.0-alpha.1"
edition = "2024"
publish = false

[[bin]]
name = "manage"
path = "src/bin/manage.rs"

[dependencies]
# Use reinhardt facade crate (imports all sub-crates)
# Uses crates.io by default (will fail until reinhardt is published)
reinhardt = { version = "0.1.0-alpha.1", features = ["core", "conf", "database", "commands"] }

# Common utilities for availability checking
example-common = { path = "../common" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
console = "0.16.1"
async-trait = "0.1"

[dev-dependencies]
example-test-macros = { path = "../test-macros" }
example-common = { path = "../common" }
reqwest = { workspace = true }
testcontainers = "0.25.2"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }

[build-dependencies]
example-common = { path = "../common" }

[features]
default = []
with-reinhardt = []

[[test]]
name = "api_tests"
required-features = ["with-reinhardt"]
