[package]
name = "reinhardt-admin-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Adapter layer for unified type imports in Reinhardt admin panel"
keywords = ["reinhardt", "admin", "adapters", "api", "web"]
categories = ["web-programming"]

[dependencies]
# Shared type definitions (always included)
reinhardt-admin-types = { workspace = true }

# Server-side only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reinhardt-admin-core = { workspace = true }
