[package]
name = "reinhardt-static"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Static file serving and production utilities for Reinhardt with health checks and metrics"

[dependencies]
# Internal dependencies
reinhardt-storage = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP
hyper = { workspace = true }
http = "1.0"
mime_guess = "2.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Hashing
sha2 = "0.10"
hex = "0.4"
md-5 = "0.10"

# Pattern matching and file walking
regex = "1.10"
walkdir = "2.4"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
